[package]
name = "ecmascript_futex"
description = "Cross-platform atomic wait and wake (aka futex) functionality using the ECMAScript Atomics memory model."
repository = "https://github.com/trynova/ecmascript_futex"
keywords = ["atomic", "futex", "ecmascript"]
version = "0.1.1"
edition = "2024"
license = "BSD-2-Clause"
categories = ["concurrency", "os", "no-std"]

[dependencies]
ecmascript_atomics = { version = "0.2.2", path = "../ecmascript_atomics/ecmascript_atomics" }

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd", target_os = "macos"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", default-features = false, features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.67", default-features = false }
wasm-bindgen = { version = "0.2.90", default-features = false }
web-sys = { version = "0.3.24", default-features = false, features = [ "Window" ] }

[build-dependencies]
rustversion = { version = "1.0.14", default-features = false }
