[package]
name = "wait_on_address"
description = "Cross-platform atomic wait and wake (aka futex) functionality."
repository = "https://github.com/DouglasDwyer/wait_on_address"
keywords = ["atomic", "futex"]
version = "0.1.3"
edition = "2024"
license = "BSD-2-Clause"
categories = ["concurrency", "os", "no-std"]

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd", target_os = "macos"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", default-features = false, features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.67", default-features = false }
wasm-bindgen = { version = "0.2.90", default-features = false }
web-sys = { version = "0.3.24", default-features = false, features = [ "Window" ] }

[build-dependencies]
rustversion = { version = "1.0.14", default-features = false }